# pySciCam

./: .gitignore  README.md  build.py  pyproject.toml  setup.py
