[project]
name = "pySciCam"
version = "0.4.4"
description = "Scientific and High speed camera file importer for Python."
authors = [{name="Daniel Duke", email="daniel.duke@monash.edu"}]
license = {text="GPL-3.0+"}
readme = "README.md"
requires-python = ">=3.10.0"
dependencies = [
    "tqdm >= 1",
    "joblib >=0.1",
    "natsort >= 1",
    "numpy >=1"
    ]

[build-system]
requires = ["setuptools", "wheel", "cython", "numpy"]


